--- a/gshop/package.json
+++ b/gshop/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
